LiftState fix